# qt_display

./: CMakeLists.txt  main.cpp  weather_ckock_display.h  weather_clock_display.cpp
